added login to schema, basic posts/group to sql schema
