# backend/groups.js
@@ -1,0 +1,19 @@
+// Groups module - exports handler functions
+
+export const getGroups = async (req, res, next) => {
+  try {
+    // TODO: Implement getGroups logic
+    res.json({ message: 'Get groups' });
+  } catch (err) {
+    next(err);
+  }
+};
+
+export const getGroupPosts = async (req, res, next) => {
+  try {
+    // TODO: Implement getGroupPosts logic
+    res.json({ message: 'Get group posts' });
+  } catch (err) {
+    next(err);
+  }
+};
